# ovh-rs

./: Cargo.toml  README.md  ovh.json
sdk/: Cargo.toml
sdk-httpmock/src/: generated_httpmock.rs
sdk/examples/: dedicated_server_describe.rs  dedicated_server_install_start.rs  dedicated_server_install_status.rs  dedicated_server_reboot.rs  dedicated_server_update.rs
sdk/src/: config.rs  context.rs  generated_sdk.rs  lib.rs
spec/: Cargo.toml
spec/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
