[package]
name = "ovh-spec"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
dropshot = { workspace = true }
# http = { workspace = true }
# hyper = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }